force-app/main/default/objects/Partner__c/fields/Technology_Area_Focus__c.field-meta.xml
<CustomField>
    <fullName>Technology_Area_Focus__c</fullName>
    <label>Technology Area Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Development</fullName>
            </value>
            <value>
                <fullName>Cloud Migration</fullName>
            </value>
            <value>
                <fullName>Collaboration &amp; Unified Communications</fullName>
            </value>
            <value>
                <fullName>Core Infrastructure</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Enterprise Networking</fullName>
            </value>
            <value>
                <fullName>Hyperconverged Platforms</fullName>
            </value>
            <value>
                <fullName>IT Help Desk</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Mobility &amp; Wireless</fullName>
            </value>
            <value>
                <fullName>Network Security</fullName>
            </value>
            <value>
                <fullName>SD-WAN</fullName>
            </value>
            <value>
                <fullName>Virtualization, Compute &amp; Storage Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>