force-app/main/default/objects/Partner__c/fields/Top_Vendor_1__c.field-meta.xml
<CustomField>
    <fullName>Top_Vendor_1__c</fullName>
    <label>Top Vendor 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>