force-app/main/default/objects/Partner__c/fields/Top_Vendor_3__c.field-meta.xml
<CustomField>
    <fullName>Top_Vendor_3__c</fullName>
    <label>Top Vendor 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>