force-app/main/default/objects/Partner__c/listViews/Active_Partners.listView-meta.xml
<ListView>
    <fullName>Active_Partners</fullName>
    <columns>NAME</columns>
    <columns>Partner_Email__c</columns>
    <columns>Allbound_Status__c</columns>
    <columns>Partner_Contract_Signed__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Partner_Website__c</columns>
    <columns>Allbound_ID__c</columns>
    <columns>Target_Verticals__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allbound_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Partners</label>
</ListView>