force-app/main/default/objects/Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allbound_Status__c</columns>
    <columns>Allbound_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Partner_of_Choice__c</columns>
    <columns>Partner_Contract_Signed__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Partner_City__c</columns>
    <columns>Partner_State__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>