force-app/main/default/objects/Partner__c/listViews/Partner_Approval_Group_Partner.listView-meta.xml
<ListView>
    <fullName>Partner_Approval_Group_Partner</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Approval Group</label>
    <queue>Partner_Approval_Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>