force-app/main/default/objects/Partner__c/listViews/Verified_Partners_with_asterisks.listView-meta.xml
<ListView>
    <fullName>Verified_Partners_with_asterisks</fullName>
    <columns>NAME</columns>
    <columns>Allbound_Status__c</columns>
    <columns>Allbound_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Partner_of_Choice__c</columns>
    <columns>Partner_Contract_Signed__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Partner_State__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>*</value>
    </filters>
    <label>Verified Partners with asterisks</label>
</ListView>